fix: some style issues caused by the new visibility badge component

--- a/src/components/Links/links.module.scss
+++ b/src/components/Links/links.module.scss
@@ -47,6 +47,7 @@
     min-width: 0;
     width: 100%;
     display: flex;
+    gap: 0.35em;
     flex: 1;
     align-items: center;
   }
@@ -68,9 +69,10 @@
   }
 
   & .links-count {
-    color: $grey;
+    min-width: fit-content;
     font-weight: 300;
     font-size: 0.8em;
+    color: $grey;
   }
 }
 
