--- a/src/components/Visibility/visibility.module.scss
+++ b/src/components/Visibility/visibility.module.scss
@@ -7,7 +7,6 @@
   border: 1px solid rgba($color: $blue, $alpha: 0.75);
   border-radius: 50px;
   padding: 0.15em 0.65em;
-  margin-left: 0.5em;
   display: flex;
   gap: 0.35em;
   align-items: center;
